# GreenHouse

TL-MCU1/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
TL-MCU1/components/lvgl/: Kconfig  lv_conf_template.h
TL-MCU1/components/lvgl/env_support/cmsis-pack/: lv_conf_cmsis.h
TL-MCU1/components/lvgl/src/: lv_conf_internal.h
TL-MCU1/components/lvgl/src/core/: lv_refr.c
TL-MCU1/components/lvgl_app/: CMakeLists.txt  lvgl_app.c
TL-MCU1/components/lvgl_app/include/: lvgl_app.h
TL-MCU1/components/lvgl_esp32_drivers/: lvgl_helpers.c
TL-MCU1/components/lvgl_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c
TL-MCU1/main/: CMakeLists.txt  lora.c  lvgl_user.c  main.c  task.c  wifi_mqtt.c
TL-MCU1/main/include/: config.h  lora.h  lvgl_user.h  main.h  task.h  wifi_mqtt.h
